--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
 	{
 		"php": "^7.0",
 		"gears/di": "*",
-		"symfony/process": "3.*",
-		"symfony/filesystem": "3.*",
-		"jakoch/phantomjs-installer": "1.9.8"
+		"symfony/process": "4.*",
+		"symfony/filesystem": "3.*"
 	},
 	"require-dev":
 	{
